# outlook-personal-mcp

./: .env.example  .gitignore  .mcpbignore  PRIVACY.md  PUBLISHING.md  README.md  manifest.json  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
docs/: DESIGN.md
docs/plans/: 2026-06-27-implementation.md
src/outlook_personal_mcp/: __main__.py  auth.py  config.py  graph.py  models.py  safety.py  server.py
src/outlook_personal_mcp/tools/: __init__.py  calendar.py  drafts.py  folders.py  mail.py
tests/: test_annotations.py  test_auth.py  test_config.py  test_graph.py  test_logging.py  test_models.py  test_server.py  test_tools_calendar_read.py  test_tools_calendar_write.py  test_tools_drafts.py  test_tools_folders.py  test_tools_mail_organize.py  test_tools_mail_read.py  test_tools_mail_send.py
