[project]
name = "mcp-outlook-personal"
version = "0.1.0"
description = "MCP server for a personal Outlook.com mailbox and calendar via Microsoft Graph"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Salah Awad" }]
dependencies = [
  "mcp>=1.2.0",
  "msal>=1.28.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
]

[project.scripts]
mcp-outlook-personal = "outlook_personal_mcp.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21", "ruff>=0.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outlook_personal_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
